--- a/website.css
+++ b/website.css
@@ -37,6 +37,12 @@ header{
     transition: .3s;
 }
 
+header.sticky{
+    background: var(--bg-color);
+    padding: 13px 18%;
+    box-shadow: 0px 0px 10px rgb(0 0 0 / 1);
+}
+
 .logo img{
     max-width: 100%;
     width: 130px;
@@ -108,7 +114,7 @@ section{
     min-height: 100vh;
     height: 100%;
     width: 100%;
-    background: url(../img/background.png);
+    background: url(img/background1.png);
     background-size: cover;
     background-position: center;
     position: relative;
@@ -188,4 +194,309 @@ span{
     max-width: 100%;
     width: 406px;
     height: auto;
+}
+
+.about{
+	display: grid;
+	grid-template-columns: repeat(2, 2fr);
+	align-items: center;
+	grid-gap: 2rem;
+}
+
+.about-img img{
+	max-width: 100%;
+	width: auto;
+	height: 507px;
+}
+
+.about-text h3{
+	color: var(--main-color);
+	font-size: 20px;
+	font-weight: 500;
+}
+
+.about-text h2{
+	font-size: var(--h2-font);
+	font-weight: 500;
+	margin: 8px 0px 25px;
+	line-height: 1.1;
+}
+
+.about-text p{
+	max-width: 550px;
+	font-size: var(--p-font);
+	color: var(--secound-color);
+	line-height: 28px;
+	margin-bottom: 45px;
+}
+
+.about{
+    min-height: 100vh;
+    height: 100%;
+    width: 100%;
+    background: url(img/background2.jpg);
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    grid-gap: 4rem;
+}
+
+.heading{
+	text-align: center;
+}
+
+.heading h2{
+	font-size: var(--h2-font);
+	font-weight: 500;
+	margin: 7px 0px 20px;
+	line-height: 1.1;
+}
+
+.heading h3{
+	color: var(--main-color);
+	font-size: 20px;
+	font-weight: 500;
+}
+
+.heading p{
+	font-size: var(--p-font);
+	color: var(--second-color);
+	line-height: 28px;
+}
+
+.blog{
+    min-height: 100vh;
+    height: 100%;
+    width: 100%;
+    background: url(img/background3.jpg);
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+
+.blog-content{
+    display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(292px, auto));
+	grid-gap: 2rem;
+	align-items: center;
+	margin-top: 5rem;
+	text-align: center;
+	cursor: pointer;
+}
+
+.col{
+	position: relative;
+}
+
+.col img{
+	max-width: 100%;
+	width: 550px;
+	height: auto;
+	object-fit: cover;
+	border-radius: 12px;
+}
+
+.layer{
+	background: transparent;
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	border-radius: 12px;
+	transition: all .40s;
+}
+
+.layer:hover{
+	background: linear-gradient(rgba(0,0,0,0.5) 0%, #191919);
+}
+
+.layer h3{
+	position: absolute;
+	width: 100%;
+	font-size: 40px;
+	font-weight: 600;
+	color: aqua;
+	bottom: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	opacity: 0;
+	transition: all .40s;
+}
+
+.layer:hover h3{
+	bottom: 85%;
+	opacity: 1;
+}
+
+.layer h5{
+	position: absolute;
+	width: 100%;
+	font-size:20px;
+	font-weight: 350;
+	color: lightblue;
+	bottom: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	opacity: 0;
+	transition: all .40s;
+}
+
+.layer:hover h5{
+	bottom: 40%;
+	opacity: 1;
+}
+
+.layer a{
+    position: absolute;
+    bottom: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	opacity: 0;
+	transition: all .40s;
+}
+
+.layer:hover a{
+	bottom: 5%;
+	opacity: 1;
+}
+
+.button{
+    display: inline-block;
+    color: var(--bg-color);
+    background: var(--main-color);
+    font-size: var(--p-font);
+    padding: 10px 40px;
+    font-weight: 500;
+    line-height: 24px;
+    border-radius: 30px;
+}
+
+.skill-content{
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(400px, auto));
+	grid-gap: 2rem;
+	align-items: center;
+	margin-top: 5rem;
+}
+
+.row{
+	background: #bc2424;
+	box-shadow: 18px 0px 87px 0px rgb(10 15 70 / 7%);
+	border-radius: 12px;
+	padding: 45px 45px 45px 45px;
+	transition: ease .45s;
+	cursor: pointer;
+}
+
+.s img{
+	height: 65px;
+	width: 65px;
+	background: #f75124;
+	padding: 15px;
+	border-radius: 50%;
+	margin-bottom: 20px;
+}
+
+.s.s-two img{
+	background: #baebcd;
+}
+
+.s.s-three img{
+	background: #d9d1fa;
+}
+
+.s.s-four img{
+	background: #faedce;
+}
+
+.row h3{
+	font-size: 24px;
+	font-weight: 500;
+	margin-bottom: 2px;
+}
+
+.row p{
+	font-size: var(--p-font);
+	color: var(--second-color);
+	line-height: 28px;
+}
+
+.row:hover{
+	will-change: transform;
+	transform: perspective(1000px) rotateX(4.80deg) rotateY(10.23deg) scale3d(1.05,1.05,1.05);
+}
+
+.skill{
+    min-height: 100vh;
+    height: 100%;
+    width: 100%;
+    background: url(img/background4.jpg);
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+
+.contact{
+	background: #8067f0eb;
+	width: 64%;
+	margin: 100px auto;
+	padding: 112px ;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	border-radius: 12px;
+	background-image: url(img/background5.jpg);
+	background-size: cover;
+}
+
+.center h3{
+	font-size: 30px;
+	font-weight: 500;
+	margin-bottom: 3px;
+	color: maroon;
+}
+
+.center p{
+	font-size: var(--p-font);
+	color: red;
+	line-height: 26px;
+	margin-bottom: 25px;
+}
+
+.contact .action form input[type="email"] {
+	max-width: 100%;
+	width: 470px;
+	padding: 12px 15px;
+	background: var(--bg-color);
+	color: var(--text-color);
+	border: none;
+	outline: none;
+	margin: 0 10px 20px 0;
+	border-radius: 30px;
+}
+
+.contact .action form input[type="submit"] {
+	padding: 12px 40px;
+	background: var(--main-color);
+	color: var(--bg-color);
+	border: none;
+	outline: none;
+	margin: 0 10px 20px 0;
+	border-radius: 30px;
+	cursor: pointer;
+}
+
+.ends{
+    text-align: center;
+    padding: 15px;
+}
+
+.ends p{
+    font-size: var(--p-font);
+    letter-spacing: 2px;
 }
